Fix DBScan algorithm
Split image into pieces with 500 pixels to reduce algorithm complexity and unite clusters until they match k